<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".formsPackage.EditingPanel"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary">

        <ImageButton
            android:id="@+id/deleteReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:contentDescription="DeleteReminder"
            android:src="@drawable/ic_baseline_delete_24"
            tools:ignore="HardcodedText,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/updateReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/design_default_color_primary"
            android:contentDescription="UpdateReminder"
            android:src="@drawable/check_icon"
            tools:ignore="HardcodedText,TouchTargetSizeCheck" />



    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollViewEditPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent,SpeakableTextPresentCheck"
        android:paddingBottom="@dimen/doubleStandardMargin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/standardMargin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_you_have_to_do"
                android:textSize="24sp"
                />


            <EditText
                android:id="@+id/reminderNameEditPanel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/standardMargin"
                android:inputType="textAutoCorrect|text"
                android:autofillHints="@string/reminder_name"
                android:hint="@string/reminder_name"
                android:maxLength="15"
                android:imeOptions="actionDone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardMargin"
                android:text="@string/due_time"
                android:textSize="24sp"/>

            <TimePicker
                android:id="@+id/dueTimeEditPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:layout_marginTop="@dimen/standardMargin"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/due_date"
                android:layout_marginTop="@dimen/standardMargin"/>

            <CalendarView
                android:id="@+id/dueDateEditPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standardMargin"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/notification"
                android:layout_marginTop="@dimen/standardMargin"/>

            <Spinner
                android:id="@+id/notificationSpinnerEditPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:layout_marginTop="@dimen/standardMargin"
                />

            <RadioGroup
                android:id="@+id/Average_Worst_ScenarioEditPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Average_Case_ScenarioEditPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/average"
                    android:textSize="18sp"/>

                <RadioButton
                    android:id="@+id/Worst_Case_ScenarioEditPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/worst"
                    android:textSize="18sp" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/transitModesEditPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/drivingModeEditPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:drawableStart="@drawable/car_direction_icon"/>

                <RadioButton
                    android:id="@+id/walkingModeEditPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standardMargin"
                    android:drawableStart="@drawable/walk_directions_icon"/>
            </RadioGroup>

            <TextView
                android:id="@+id/durationToDestinationEditPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="@dimen/standardMargin"/>



        </LinearLayout>



    </ScrollView>


</LinearLayout>


